Создали спрайт иконки

--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
             </nav>
             <ul class="menu-contact list">
                 <li class="item">
-                    <a href=" mailto:info@devstudio.com" class="contact-nav link">info@devstudio.com</a
+                    <a href=" mailto:info@devstudio.com" class="contact-nav link button">info@devstudio.com</a
             >
+            <svg class="button-icon">
+              <use href="./images/icons.svg#icon-envelope-hover-1"></use>
+            </svg>
           </li>
           <li class="item">
-            <a href="tel:+380961111111 " class="contact-nav link"
+            <a href="tel:+380961111111 " class="contact-nav link button"
               >+38 096 111 11 11</a
             >
+            <svg class="button-icon-phone">
+              <use href="./images/icons.svg#icon-smartphone-1"></use>
+            </svg>
           </li>
         </ul>
       </div>
@@ -57,6 +63,11 @@
           <h2 class="section-title visually-hidden">Преимущества</h2>
           <ul class="list feature">
             <li class="feature-list">
+              <div class="thumb">
+                <svg class="icon-antenna">
+                  <use href="./images/icons.svg#Antanna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
