--- a/index.html
+++ b/index.html
@@ -32,19 +32,17 @@
             </nav>
             <ul class="menu-contact list">
                 <li class="item">
-                    <a href=" mailto:info@devstudio.com" class="contact-nav link button">info@devstudio.com</a
-            >
-            <svg class="button-icon">
-              <use href="./images/icons.svg#icon-envelope-hover-1"></use>
-            </svg>
-          </li>
-          <li class="item">
-            <a href="tel:+380961111111 " class="contact-nav link button"
+                    <a href=" mailto:info@devstudio.com" class="contact-nav link">
+                        <svg class="button-icon">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg> info@devstudio.com
+                    </a>
+                </li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="contact-nav link"><svg class="button-icon-phone">
+                <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
-            <svg class="button-icon-phone">
-              <use href="./images/icons.svg#icon-smartphone-1"></use>
-            </svg>
           </li>
         </ul>
       </div>
@@ -64,8 +62,8 @@
           <ul class="list feature">
             <li class="feature-list">
               <div class="thumb">
-                <svg class="icon-antenna">
-                  <use href="./images/icons.svg#Antanna"></use>
+                <svg class="icon-antenna" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="feature-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -75,6 +73,11 @@
               </p>
             </li>
             <li class="feature-list">
+              <div class="thumb">
+                <svg class="icon-antenna" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">ПУНКТУАЛЬНОСТЬ</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -82,6 +85,11 @@
               </p>
             </li>
             <li class="feature-list">
+              <div class="thumb">
+                <svg class="icon-antenna" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-diagramma"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">ПЛАНИРОВАНИЕ</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -89,6 +97,11 @@
               </p>
             </li>
             <li class="feature-list">
+              <div class="thumb">
+                <svg class="icon-antenna" width="70px" height="70px">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -145,52 +158,216 @@
               <div class="employees-content-wrapper">
                 <h3 class="employees-name">Игорь Демьяненко</h3>
                 <p lang="en " class="employees-position">Product Designer</p>
-              </div>
-            </li>
-            <li class="employees-photo">
-              <img
-                src="./images/img-2.jpg "
-                alt="Ольга Р. "
-                width="270 "
-                height="260 "
-              />
-              <div class="employees-content-wrapper">
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                </li>
+                <li class="social-list-item">
+                    <a href="" class="social-list-link">
+                        <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        </li>
+        <li class="employees-photo">
+            <img src="./images/img-2.jpg " alt="Ольга Р. " width="270 " height="260 " />
+            <div class="employees-content-wrapper">
                 <h3 class="employees-name">Ольга Репина</h3>
                 <p lang="en " class="employees-position">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="employees-photo">
-              <img
-                src="./images/img-3.jpg "
-                alt="Николай Т. "
-                width="270 "
-                height="260 "
-              />
-              <div class="employees-content-wrapper">
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <li class="employees-photo">
+            <img src="./images/img-3.jpg " alt="Николай Т. " width="270 " height="260 " />
+            <div class="employees-content-wrapper">
                 <h3 class="employees-name">Николай Тарасов</h3>
                 <p lang="en " class="employees-position">Marketing</p>
-              </div>
-            </li>
-            <li class="employees-photo">
-              <img
-                src="./images/img-4.jpg "
-                alt="Михаил Е. "
-                width="270 "
-                height="260 "
-              />
-              <div class="employees-content-wrapper">
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        <li class="employees-photo">
+            <img src="./images/img-4.jpg " alt="Михаил Е. " width="270 " height="260 " />
+            <div class="employees-content-wrapper">
                 <h3 class="employees-name">Михаил Ермаков</h3>
                 <p lang="en " class="employees-position">UI Designer</p>
-              </div>
-            </li>
-          </ul>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                        </a>
+                    </li>
+                    <li class="social-list-item">
+                        <a href="" class="social-list-link">
+                            <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </li>
+        </ul>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <div class="container">
-        <a class="logo-footer link" href=" " lang="en "
-          >Web<span class="logo-accent-footer">Studio</span></a
+        </section>
+        <section class="section">
+            <h2 class="section-title">Постоянные клиенты</h2>
+
+            <ul class="list clients-link">
+                <li class="clients-list">
+                    <div class="clients">
+                        <a href="" class="our-clints">
+                            <svg class="our-clients-icon" width="106px" height="60px">
+                  <use href="./images/icons.svg#icon-client"></use>
+                </svg>
+                        </a>
+                    </div>
+                </li>
+                <li class="clients-list">
+                    <div class="clients">
+                        <a href="" class="our-clints">
+                            <svg class="our-clients-icon" width="106px" height="60px">
+                  <use href="./images/icons.svg#icon-client_1"></use>
+                </svg>
+                        </a>
+                    </div>
+                </li>
+                <li class="clients-list">
+                    <div class="clients">
+                        <a href="" class="our-clints">
+                            <svg class="our-clients-icon" width="106px" height="60px">
+                  <use href="./images/icons.svg#icon-client_2"></use>
+                </svg>
+                        </a>
+                    </div>
+                </li>
+                <li class="clients-list">
+                    <div class="clients">
+                        <a href="" class="our-clints">
+                            <svg class="our-clients-icon" width="106px" height="60px">
+                  <use href="./images/icons.svg#icon-client_3"></use>
+                </svg>
+                        </a>
+                    </div>
+                </li>
+                <li class="clients-list">
+                    <div class="clients">
+                        <a href="" class="our-clints">
+                            <svg class="our-clients-icon" width="106px" height="60px">
+                  <use href="./images/icons.svg#icon-client_4"></use>
+                </svg>
+                        </a>
+                    </div>
+                </li>
+                <li class="clients-list">
+                    <div class="clients">
+                        <a href="" class="our-clints">
+                            <svg class="our-clients-icon" width="106px" height="60px">
+                  <use href="./images/icons.svg#icon-client_5"></use>
+                </svg>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        </main>
+        <footer class="footer">
+            <div class="footer-container">
+                <a class="logo-footer link" href=" " lang="en ">Web<span class="logo-accent-footer">Studio</span></a
         >
         <address class="address">
           <ul class="list">
@@ -215,6 +392,40 @@
           </ul>
         </address>
       </div>
-    </footer>
-  </body>
+      <div>
+        <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+        <ul class="footer-list list">
+          <li class="footer-list-item">
+            <a href="" class="footer-list-link">
+              <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+                    </a>
+                </li>
+                </ul>
+            </div>
+        </footer>
+</body>
+
 </html>
