--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,15 @@
 
                 <ul class="menu-contact list">
                     <li class="item">
-                        <a href="mailto:info@devstudio.com" class="contact-nav link">info@devstudio.com</a
-              >
-            </li>
-            <li class="item">
-              <a href="tel:+380961111111" class="contact-nav link"
+                        <a href=" mailto:info@devstudio.com" class="contact-nav link">
+                            <svg class="button-icon">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg> info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="tel:+380961111111" class="contact-nav link"><svg class="button-icon-phone">
+                  <use href="./images/icons.svg#icon-smartphone"></use></svg
                 >+38 096 111 11 11</a
               >
             </li>
@@ -189,6 +193,40 @@
           </ul>
         </address>
       </div>
-    </footer>
-  </body>
+      <div>
+        <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+        <ul class="footer-list list">
+          <li class="footer-list-item">
+            <a href="" class="footer-list-link">
+              <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+                    </a>
+                </li>
+                </ul>
+            </div>
+        </footer>
+</body>
+
 </html>
