загрузили заново иконки

--- a/portfolio.html
+++ b/portfolio.html
@@ -206,21 +206,21 @@
                 <li class="footer-list-item">
                     <a href="" class="footer-list-link">
                         <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a href="" class="footer-list-link">
                         <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a href="" class="footer-list-link">
                         <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
                     </a>
                 </li>
