--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
                       <svg class="social-list-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                 </li>
@@ -199,7 +199,7 @@
                     <li class="social-list-item">
                         <a href="" class="social-list-link">
                             <svg class="social-list-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                         </a>
                     </li>
@@ -236,7 +236,7 @@
                     <li class="social-list-item">
                         <a href="" class="social-list-link">
                             <svg class="social-list-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                         </a>
                     </li>
@@ -273,7 +273,7 @@
                     <li class="social-list-item">
                         <a href="" class="social-list-link">
                             <svg class="social-list-icon" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                         </a>
                     </li>
@@ -405,21 +405,21 @@
                 <li class="footer-list-item">
                     <a href="" class="footer-list-link">
                         <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a href="" class="footer-list-link">
                         <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
                     </a>
                 </li>
                 <li class="footer-list-item">
                     <a href="" class="footer-list-link">
                         <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
                     </a>
                 </li>
