внесли изменение в спрайт

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,52 +40,48 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="tel:+380961111111" class="contact-nav link"><svg class="button-icon-phone">
-                  <use href="./images/icons.svg#icon-smartphone"></use></svg
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </nav>
-      </div>
+                        <a href="tel:+380961111111" class="contact-nav link">
+                            <svg class="button-icon-phone">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg> +38 096 111 11 11
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-      <section class="section">
-        <div class="container">
-          <h1 class="filters-link visually-hidden">Каталог работ</h1>
+        <section class="section">
+            <div class="container">
+                <h1 class="filters-link visually-hidden">Каталог работ</h1>
 
-          <ul class="list filters">
-            <li class="filters-btn">
-              <button class="style-btn current" type="button">Все</button>
-            </li>
-            <li class="filters-btn">
-              <button class="style-btn" type="button">Веб-сайты</button>
-            </li>
-            <li class="filters-btn">
-              <button class="style-btn" type="button">Приложения</button>
-            </li>
-            <li class="filters-btn">
-              <button class="style-btn" type="button">Дизайн</button>
-            </li>
-            <li class="filters-btn">
-              <button class="style-btn" type="button">Маркетинг</button>
-            </li>
-          </ul>
+                <ul class="list filters">
+                    <li class="filters-btn">
+                        <button class="style-btn current" type="button">Все</button>
+                    </li>
+                    <li class="filters-btn">
+                        <button class="style-btn" type="button">Веб-сайты</button>
+                    </li>
+                    <li class="filters-btn">
+                        <button class="style-btn" type="button">Приложения</button>
+                    </li>
+                    <li class="filters-btn">
+                        <button class="style-btn" type="button">Дизайн</button>
+                    </li>
+                    <li class="filters-btn">
+                        <button class="style-btn" type="button">Маркетинг</button>
+                    </li>
+                </ul>
 
-          <ul class="list catalog">
-            <li class="catalog-link">
-              <a href="" class="link">
-                <img
-                  src="./images/portfolio_1.jpg"
-                  alt="наши сотрудники"
-                  width="370"
-                  height="294"
-                />
-                <div class="catalog-content-wrapper">
-                  <h2 class="section-works">Технокряк</h2>
-                  <p class="subtytle">Веб-сайт</p>
-                </div>
-              </a>
+                <ul class="list catalog">
+                    <li class="catalog-link">
+                        <a href="" class="link">
+                            <img src="./images/portfolio_1.jpg" alt="наши сотрудники" width="370" height="294" />
+                            <div class="catalog-content-wrapper">
+                                <h2 class="section-works">Технокряк</h2>
+                                <p class="subtytle">Веб-сайт</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="catalog-link">
                         <a href="" class="link">
@@ -162,12 +158,12 @@
                         </a>
                     </li>
                 </ul>
-        </div>
+            </div>
         </section>
-        </main>
-        <footer class="footer">
-            <div class="container">
-                <a class="logo-footer link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <a class="logo-footer link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
         >
         <address class="address">
           <ul class="list">
@@ -202,31 +198,31 @@
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
-                </li>
-                <li class="footer-list-item">
-                    <a href="" class="footer-list-link">
-                        <svg class="footer-list-icon" width="20" height="20">
+            </li>
+            <li class="footer-list-item">
+                <a href="" class="footer-list-link">
+                    <svg class="footer-list-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg>
-                    </a>
-                </li>
-                <li class="footer-list-item">
-                    <a href="" class="footer-list-link">
-                        <svg class="footer-list-icon" width="20" height="20">
+                </a>
+            </li>
+            <li class="footer-list-item">
+                <a href="" class="footer-list-link">
+                    <svg class="footer-list-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg>
-                    </a>
-                </li>
-                <li class="footer-list-item">
-                    <a href="" class="footer-list-link">
-                        <svg class="footer-list-icon" width="20" height="20">
+                </a>
+            </li>
+            <li class="footer-list-item">
+                <a href="" class="footer-list-link">
+                    <svg class="footer-list-icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg>
-                    </a>
-                </li>
-                </ul>
-            </div>
-        </footer>
+                </a>
+            </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
