--- a/portfolio.html
+++ b/portfolio.html
@@ -162,65 +162,68 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a class="logo-footer link" href="" lang="en">Web<span class="logo-accent-footer">Studio</span></a
-        >
-        <address class="address">
-          <ul class="list">
-            <li>
-              <a
-                href="https://goo.gl/maps/fRFSX92PW33ccEuu6"
-                class="link contact-info"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@example.com" class="link contact-info-item"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="link contact-info-item"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
-      </div>
-      <div>
-        <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
-        <ul class="footer-list list">
-          <li class="footer-list-item">
-            <a href="" class="footer-list-link">
-              <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-            </li>
-            <li class="footer-list-item">
-                <a href="" class="footer-list-link">
-                    <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
-                </a>
-            </li>
-            <li class="footer-list-item">
-                <a href="" class="footer-list-link">
-                    <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
-                </a>
-            </li>
-            <li class="footer-list-item">
-                <a href="" class="footer-list-link">
-                    <svg class="footer-list-icon" width="20" height="20">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
-                </a>
-            </li>
+        <div class="footer-container">
+            <div>
+                <a class="logo-footer link" href=" " lang="en ">Web<span class="logo-accent-footer">Studio</span></a
+          >
+          <address class="address">
+            <ul class="list">
+              <li class="address-list">
+                <a
+                  href="https://goo.gl/maps/fRFSX92PW33ccEuu6 "
+                  target="_blank "
+                  class="link contact-info"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="address-list">
+                <a
+                  href="mailto:info@example.com "
+                  class="link contact-info-item"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111 " class="link contact-info-item"
+                  >+38 096 111 11 11</a
+                >
+              </li>
             </ul>
+          </address>
+        </div>
+        <div class="footer-icons">
+          <h3 class="footer-title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+          <ul class="footer-list list">
+            <li class="footer-list-item">
+              <a href="" class="footer-list-link">
+                <svg class="footer-list-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+                    </a>
+                </li>
+                <li class="footer-list-item">
+                    <a href="" class="footer-list-link">
+                        <svg class="footer-list-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+                    </a>
+                </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
